--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ body {
   background-color: #f7e9de;
   color: #1a1a1a;
   font-family: sans-serif;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .board {
