--- a/docs/styles.css
+++ b/docs/styles.css
@@ -55,10 +55,18 @@ body {
 .column-title {
   padding: 12px;
   font-weight: bold;
-  text-align: center;
+  /* text-align: center; */
   font-variant: small-caps;
   text-transform: lowercase;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+.column-title span {
+  float: right;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 1px 12px;
+  border-radius: 16px;
+  text-shadow: none;
+  font-weight: normal;
 }
 .column-wrap {
   background-color: #f9d9d8;
